manifests/poi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  namespace: hackapi
  labels:
    deploy: poi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - image: "aqaksacr.azurecr.io/poi"
        imagePullPolicy: Always
        name: poi
        livenessProbe:
          httpGet:
            path: /api/poi/healthcheck
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/poi/healthcheck
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
