manifests/poi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: hackapi
spec:
  type: ClusterIP
  selector:
    app: poi
  ports:
    - protocol: TCP
      name: poi-http
      port: 80
      targetPort: 8080
    - protocol: TCP
      name: poi-https
      port: 443
      targetPort: 443
