manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "aqakscluster-46f2"
    labels:
        app: "aqakscluster-46f2"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "aqakscluster-46f2"
