manifests/tripviewer-service.yml
apiVersion: v1
kind: Service
metadata:
    name: "tripviewer"
    labels:
        app: "tripviewer"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "tripviewer"
