manifests/tripviewer-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "poi"
    labels:
        app: "poi"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: hackapi-aqakscluster-46f2.4a680e702b4f4f89ac6e.canadacentral.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "poi"
                servicePort: 80
